Bug 503671 - Toggles, sliders, and some buttons in widgets don't fully adapt to changing the color scheme from Breeze Light to Dark (or vice versa) until plasmashell is restarted
Summary: Toggles, sliders, and some buttons in widgets don't fully adapt to changing t...
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: components (other bugs)
Version First Reported In: 6.3.6
Platform: Fedora RPMs Linux
: HI minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 493781 504029 508658 514710 520358 520425 520919 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-02 17:39 UTC by Roke Julian Lockhart Beedell
Modified: 2026-06-11 13:19 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.27
Sentry Crash Report:


Attachments
A Screencast Demonstrating The "Raise maximum volume" Toggle Not Switching From Breeze Light To Dark (450.81 KB, video/webm)
2025-05-02 17:39 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating The "Raise maximum volume" Toggle Not Switched From Breeze Light To Dark (43.95 KB, image/png)
2025-05-02 17:40 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating QRadioButtons and QSliders Not Switched From Breeze Light To Dark In The "Audio Volume" Plasmoid (44.69 KB, image/png)
2025-05-02 17:40 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating "Brightness and Colour" Not Switched From Breeze Light To Dark (19.25 KB, image/png)
2025-05-05 19:33 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating "Bluetooth" Not Switched From Breeze Light To Dark (13.50 KB, image/png)
2025-05-05 19:33 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating The "Notifications" Flyout Not Switched From Breeze Light To Dark (63.86 KB, image/png)
2025-05-05 19:34 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating "Networks" Not Switched From Breeze Light To Dark (16.54 KB, image/png)
2025-05-05 19:34 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating "Power and Battery" Not Switched From Breeze Light To Dark (26.65 KB, image/png)
2025-05-05 19:34 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating The "Icons-Only Task Manager"'s Media Preview Not Switched From Breeze Light To Dark (23.88 KB, image/png)
2025-05-05 20:31 UTC, Roke Julian Lockhart Beedell
Details
A Screencast Demonstrating That Colour Scheme, Not Global Theme, Replacement Is At Fault (1.46 MB, video/webm)
2025-05-05 21:49 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Of A Notification's Buttons' Padding Not Switched From Breeze Light To Dark (15.80 KB, image/png)
2025-05-11 14:20 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Demonstrating "Brightness and Colour" Not Switched From Breeze Dark To Light (23.10 KB, image/png)
2025-05-20 16:18 UTC, Roke Julian Lockhart Beedell
Details
A Screenshot Of A Notification's Button Not Switched From Breeze Light To Dark (14.76 KB, image/png)
2025-05-26 01:02 UTC, Roke Julian Lockhart Beedell
Details
Bluetooth applet - pinned (166.18 KB, image/png)
2025-09-19 17:07 UTC, TraceyC
Details
Bluetooth applet - unpinned (160.57 KB, image/png)
2025-09-19 17:08 UTC, TraceyC
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roke Julian Lockhart Beedell 2025-05-02 17:39:35 UTC
Created attachment 180886 [details]
A Screencast Demonstrating The "Raise maximum volume" Toggle Not Switching From Breeze Light To Dark

SUMMARY

When switching between the Breeze Dark and Light global themes, the "Audio Volume" plasmoid consistently doesn't switch themes for some elements. How much doesn't adapt differs. I'll demonstrate this in the screenshots I've yet to attach.

STEPS TO REPRODUCE

1. Pin the plasmoid.

2. Switch global themes.

OBSERVED RESULT

Some of its elements don't switch. Consistently, the "Raise maximum volume" toggle.

EXPECTED RESULT

They all should.

SOFTWARE/OS VERSIONS

> Operating System: Fedora Linux 42  
> KDE Plasma Version: 6.3.4  
> KDE Frameworks Version: 6.13.0  
> Qt Version: 6.9.0  
> Kernel Version: 6.14.4-300.fc42.x86_64 (64-bit)  
> Graphics Platform: Wayland

ADDITIONAL INFORMATION

The speed at which I change the theme doesn't appear to influence how much adapts.
Comment 1 Roke Julian Lockhart Beedell 2025-05-02 17:40:19 UTC
Created attachment 180887 [details]
A Screenshot Demonstrating The "Raise maximum volume" Toggle Not Switched From Breeze Light To Dark
Comment 2 Roke Julian Lockhart Beedell 2025-05-02 17:40:51 UTC
Created attachment 180888 [details]
A Screenshot Demonstrating QRadioButtons and QSliders Not Switched From Breeze Light To Dark In The "Audio Volume" Plasmoid
Comment 3 Roke Julian Lockhart Beedell 2025-05-05 19:33:38 UTC
Created attachment 180959 [details]
A Screenshot Demonstrating "Brightness and Colour" Not Switched From Breeze Light To Dark
Comment 4 Roke Julian Lockhart Beedell 2025-05-05 19:33:57 UTC
Created attachment 180960 [details]
A Screenshot Demonstrating "Bluetooth" Not Switched From Breeze Light To Dark
Comment 5 Roke Julian Lockhart Beedell 2025-05-05 19:34:16 UTC
Created attachment 180961 [details]
A Screenshot Demonstrating The "Notifications" Flyout Not Switched From Breeze Light To Dark
Comment 6 Roke Julian Lockhart Beedell 2025-05-05 19:34:40 UTC
Created attachment 180962 [details]
A Screenshot Demonstrating "Networks" Not Switched From Breeze Light To Dark
Comment 7 Roke Julian Lockhart Beedell 2025-05-05 19:34:59 UTC
Created attachment 180963 [details]
A Screenshot Demonstrating "Power and Battery" Not Switched From Breeze Light To Dark
Comment 8 Roke Julian Lockhart Beedell 2025-05-05 19:36:02 UTC
(In reply to Roke Julian Lockhart Beedell from comment #7)

This isn't limited to the "Audio Volume" plasmoid. Please re-triage.
Comment 9 Roke Julian Lockhart Beedell 2025-05-05 20:31:48 UTC
Created attachment 180965 [details]
A Screenshot Demonstrating The "Icons-Only Task Manager"'s Media Preview Not Switched From Breeze Light To Dark

This also occurs to the Icons-Only Task Manager's previewer when audio is playing via Firefox with the Plasma Integration extension installed. However, screenshotting it with "Active Window" mode yielded the usual:

> An error occurred while taking a screenshot.  
> KWin screenshot request failed:  
> Invalid window requested  
> Potentially relevant information:  
> - Method: CaptureActiveWindow  
> - Method specific arguments: QMap(("include-decoration", QVariant(bool, true))("include-shadow", > QVariant(bool, false))("native-resolution", QVariant(bool, true)))

...and "Select Window" caused it to disappear, so you'll have to cope with a manually cropped version. Gosh I wish I could use `noborderrule=2` on Wayland. :(
Comment 10 Ismael Asensio 2025-05-05 20:55:42 UTC
Can you reproduce the same behavior when switching just the Color Scheme (from the Colors module settings)?
Comment 11 Roke Julian Lockhart Beedell 2025-05-05 21:49:11 UTC
Created attachment 180969 [details]
A Screencast Demonstrating That Colour Scheme, Not Global Theme, Replacement Is At Fault

(In reply to Ismael Asensio from comment #10)

The sliders are nigh random in when they decide to not darken, but the consistently-undarkenable toggles refuse to even when merely switching `.colors`s.
Comment 12 John Kizer 2025-05-11 05:45:32 UTC
I can reproduce at least some of these elements occurring on a Neon VM. Perhaps related to https://bugs.kde.org/show_bug.cgi?id=495462 ?
Comment 13 Roke Julian Lockhart Beedell 2025-05-11 07:58:16 UTC
(In reply to John Kizer from comment #12)

Thanks! Was going to report that next. Saves us some time.
Comment 14 Roke Julian Lockhart Beedell 2025-05-11 14:20:23 UTC
Created attachment 181176 [details]
A Screenshot Of A Notification's Buttons' Padding Not Switched From Breeze Light To Dark

(In reply to John Kizer from comment #12)

This also occurs to some buttons. Worth reporting separately, or can I leave them as part of this?
Comment 15 John Kizer 2025-05-12 16:26:42 UTC
I'd be pretty surprised if the cause of the buttons getting out-of-sync isn't the same as the sliders - adding that to the title as it would likely be related.
Comment 16 Nate Graham 2025-05-13 18:39:37 UTC
*** Bug 504029 has been marked as a duplicate of this bug. ***
Comment 17 Roke Julian Lockhart Beedell 2025-05-20 16:18:03 UTC
Created attachment 181579 [details]
A Screenshot Demonstrating "Brightness and Colour" Not Switched From Breeze Dark To Light
Comment 18 Marco Martin 2025-05-22 12:36:32 UTC
*** Bug 493781 has been marked as a duplicate of this bug. ***
Comment 19 Roke Julian Lockhart Beedell 2025-05-26 01:02:55 UTC
Created attachment 181751 [details]
A Screenshot Of A Notification's Button Not Switched From Breeze Light To Dark

This renders text unreadable on some notifications' action buttons.
Comment 20 Bug Janitor Service 2025-08-06 22:22:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ksvg/-/merge_requests/68
Comment 21 Marco Martin 2025-08-11 12:19:49 UTC
Git commit 2c80c7297fecae40b20d23d3e8ab01ef665e7779 by Marco Martin, on behalf of Vlad Zahorodnii.
Committed on 11/08/2025 at 07:38.
Pushed by vladz into branch 'master'.

Fix FrameSvg not refreshing when color scheme changes

The cache ids in the FrameSvg don't take into account the style sheet,
which can result in using cached background for previous color scheme.

M  +9    -7    src/declarativeimports/framesvgitem.cpp
M  +9    -7    src/declarativeimports/svgitem.cpp
M  +28   -2    src/ksvg/framesvg.cpp
M  +2    -0    src/ksvg/private/framesvg_p.h
M  +28   -6    src/ksvg/svg.cpp
M  +21   -0    src/ksvg/svg.h

https://invent.kde.org/frameworks/ksvg/-/commit/2c80c7297fecae40b20d23d3e8ab01ef665e7779
Comment 22 Patrick Silva 2025-08-24 13:48:56 UTC
*** Bug 508658 has been marked as a duplicate of this bug. ***
Comment 23 Patrick Silva 2025-08-24 14:20:12 UTC
This bug persists on neon unstable when switching the global theme in Quick Settings page of System Settings.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Graphics Platform: Wayland
Comment 24 Nate Graham 2025-08-24 17:23:54 UTC
Works for me on KDE Linux. Could be a Neon issue?
Comment 25 Patrick Silva 2025-09-19 13:57:12 UTC
The bug also persists on Arch Linux running Plasma 6.5 beta.

Operating System: Arch Linux 
KDE Plasma Version: 6.4.90
KDE Frameworks Version: 6.18.0
Qt Version: 6.10.0
Graphics Platform: Wayland
Comment 26 TraceyC 2025-09-19 17:05:29 UTC
I'm able to reproduce the bug on git-master, with KDE Frameworks 6.19.0, with applets other than Audio

Based on the original video
Steps to reproduce:
1. Pin the Audio Volume applet
2. Open System Settings and in Quick Settings apply the theme not currently used (e.g. if Breeze Dark was used, switch to Breeze)
3. Inspect the Raise maximum volume toggle

Original bug - After switching to Breeze Dark, it is white (as in Breeze) instead of Black
On my system, the toggle changes color as expected
With other applets in the system tray, however, I do still see a bug.

With an applet (like bluetooth) pinned, when switching from Breeze to Breeze Dark, the "Enable Bluetooth" slider is only partially re-colored until plasmashell is restarted.

If it isn't pinned, the entire slider background doesn't switch.
Comment 27 TraceyC 2025-09-19 17:07:17 UTC
Created attachment 185105 [details]
Bluetooth applet - pinned

The pinned bluetooth applet after switching from Breeze Dark to Breeze and back to Breeze Dark
Comment 28 TraceyC 2025-09-19 17:08:02 UTC
Created attachment 185106 [details]
Bluetooth applet - unpinned

Bluetooth applet, unpinned, after switching from Breeze Dark to Breeze and back
Comment 29 TraceyC 2025-09-19 17:08:12 UTC
.
Comment 30 Nate Graham 2026-01-18 21:52:56 UTC
*** Bug 514710 has been marked as a duplicate of this bug. ***
Comment 31 Nate Graham 2026-05-18 21:45:48 UTC
*** Bug 520358 has been marked as a duplicate of this bug. ***
Comment 32 Nate Graham 2026-05-22 20:40:55 UTC
*** Bug 520425 has been marked as a duplicate of this bug. ***
Comment 33 Bug Janitor Service 2026-06-01 14:54:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ksvg/-/merge_requests/110
Comment 34 Nate Graham 2026-06-03 13:39:25 UTC
*** Bug 520919 has been marked as a duplicate of this bug. ***
Comment 35 Marco Martin 2026-06-04 13:08:21 UTC
Git commit 9bfc5a8daf68f325a197ec8786da7209ddb0adcd by Marco Martin.
Committed on 04/06/2026 at 13:04.
Pushed by mart into branch 'master'.

Svg: clear stylesheetOverride on imageSetChanged

If imageset colors changed, stylesheetOverride will lways be
invalid, because it contains both the colors it overrides and the
colors it doesn't, which come from imageset colors

M  +1    -1    autotests/CMakeLists.txt
A  +1    -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/element.svg
A  +18   -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/metadata.json
A  +1    -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/opaque/element.svg
A  +5    -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/plasmarc
M  +48   -2    autotests/svgtest.cpp
M  +4    -0    src/ksvg/svg.cpp

https://invent.kde.org/frameworks/ksvg/-/commit/9bfc5a8daf68f325a197ec8786da7209ddb0adcd
Comment 36 Marco Martin 2026-06-11 13:19:38 UTC
Git commit cf03b65e3ae4de2f6f800f888827faa1f53a3ee5 by Marco Martin.
Committed on 11/06/2026 at 13:19.
Pushed by mart into branch 'Frameworks/6.24'.

Svg: clear stylesheetOverride on imageSetChanged

If imageset colors changed, stylesheetOverride will lways be
invalid, because it contains both the colors it overrides and the
colors it doesn't, which come from imageset colors

M  +3    -2    autotests/CMakeLists.txt
A  +1    -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/element.svg
A  +18   -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/metadata.json
A  +1    -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/opaque/element.svg
A  +5    -0    autotests/data/plasma/desktoptheme/testthemesystemcolors/plasmarc
A  +201  -0    autotests/svgtest.cpp     [License: LGPL(v2.0+)]
M  +4    -0    src/ksvg/svg.cpp

https://invent.kde.org/frameworks/ksvg/-/commit/cf03b65e3ae4de2f6f800f888827faa1f53a3ee5