Fix FrameSvg not refreshing when color scheme changes

The cache ids in the FrameSvg don't take into account the style sheet,
which can result in using cached background for previous color scheme.

BUG: 503671